--- a/subject.css
+++ b/subject.css
@@ -48,7 +48,8 @@
 	border-collapse:collapse;
 }
 tr,td,th{
-	padding:10px;
+  padding:17px;
+ 
 }
 .success{
 	background:rgb(0, 128, 102);
@@ -92,4 +93,106 @@ tr,td,th{
     border-radius: 10px;
     font-size: 10px;
     border: ghostwhite;
+}
+.notify{
+  margin-left: 25%;
+  display: inline-block;
+  
+}
+.textarea {
+  width: 20%;
+}
+.btn_publish {
+  background-color:  rgb(37, 87, 95);
+    color: white;
+    padding: 10px 30px;
+    margin-top: 10%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 20px;
+    border: ghostwhite;
+}
+.timatable {
+  margin-left: 0%;
+  display: inline-block;
+  position: absolute;
+  margin-bottom: auto;
+}
+.timatable table{
+	border-collapse:collapse;
+}
+.search{
+  margin-left: 25%;
+  display: inline-block;
+  margin-top: 1%;
+  
+}
+.input1{
+  height: 10px;
+  width: 70%;
+  padding: 5px 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+.btn_tbl {
+  background-color:  rgb(37, 87, 95);
+    color: white;
+    padding: 8px 30px;
+    margin-top: 5%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 15px;
+    border: ghostwhite;
+}
+.mat{
+  background: hotpink;
+  border-radius: 5px;
+  padding:  10px;
+  
+
+}
+.let{
+  background: rgb(176, 220, 218);
+  border-radius: 5px;
+  padding:  10px;
+}
+.fiz{
+  background: rgb(168, 160, 225);
+  border-radius: 5px;
+  padding:  10px;
+  
+}
+.hist{
+  color: rgb(167, 107, 107);
+  border-radius: 5px;
+  padding:  10px;
+  
+  
+}
+.fisk{
+  background: rgb(219, 177, 235);
+  border-radius: 5px;
+  padding:  10px;
+  
+}
+.bio{
+  background: rgb(231, 121, 127);
+  border-radius: 5px;
+  padding:  10px;
+  
+}
+.gjeo{
+  background: rgb(127, 236, 198);
+  border-radius: 5px;
+  padding:  10px;
+}
+.kim{
+  background: rgb(232, 247, 198);
+  border-radius: 5px;
+  padding:  10px;
 }
